@@ -1,1 +1,1 @@
-0.0.1 - untested
+0.0.1 - linux
